# BrainKB

./: .gitignore  .gitmodules  Dockerfile.unified  LOCAL_DEPLOYMENT.md  README.unified-docker.md  SETUP_AUTO_DOCKER_COMPOSE.md  SETUP_UI.md  docker-compose-hook.sh  docker-compose.unified.yml  env.template  readme.md  start.sh  start_service.sh  start_services.sh  supervisord.conf  validate_env.sh
APItokenmanager/: Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  requirements.txt
Brain2KG/: Dockerfile  LICENSE  README.md  define_ontology_to_csv.py  docker-compose.yml  pyproject.toml  run.py
Brain2KG/brain2kg/: __init__.py
Brain2KG/brain2kg/api/: README.md  configure_logging.py  main.py
Brain2KG/brain2kg/api/models/: io.py
Brain2KG/brain2kg/api/routers/: jwt_auth.py
Brain2KG/brain2kg/text2kg/utils/: llm_utils.py
Brain2KG/few_shot_examples/: sd_few_shot_examples.txt
Brain2KG/prompt_templates/: sa_template.txt
Brain2KG/schemas/triplets/: neuro_schema_triplets.txt
WebApp/: requirements.txt
brain2kg/: hf_test.ipynb  pronoun_test.ipynb
chat_service/: DOCKER_README.md  Dockerfile  README.md  docker-commands.sh  docker-compose-dev.yml  docker-compose-prod.yml  requirements.txt
linkml-models/: readme.md
ml_service/: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  requirements.txt
ollama/: docker-compose.yml  run_ollama_docker.sh
oxigraph/: docker-compose.yml  nginx.conf  readme.md
pgadmin-init/: generate-servers-json.sh
query_service/: requirements.txt
rabbit-mq/: .env.example  docker-compose.yml  (+3 more)
(+130 files in other folders)
